Termianl mode changes + battery % + proto update to last version